feat: API認証契約をcookieAuthへ変更
